--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,39 +1,49 @@
-body
-{
-  font-family: Tahoma, Geneva, Verdana, sans-serif ;
-  color: #fff;
-  background-color:#f1f1f1;
-  background-size: cover;
-}
 *
 {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
+    box-sizing:border-box ;
 }
-.banner
+body
 {
-  background: url('../images/pexels.jpeg');
-  width: 100%;
-  background-size: cover;
+    font-size: 20px;
+    overflow-x: hidden;
+    color: white;
+    font-family: 'Flamenco', cursive;
 }
-.top-bar
+header
 {
-  background-color:#01474a;
-  display: flex;
-   width: 100%;
-   height: auto;
-   position: fixed;
+background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/pexels.jpeg");
+height: 105vh;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+}
+.clearfix:after
+{
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0px;
+    clear: both;
+}
+.row
+{
+    max-width: 1180px;
+    margin: 0 auto;
 }
 .logo
 {
-  font-weight: bold;
-  color: #ffffff;
-  flex: 1;
-  font-size: 30px;
-  padding:10px;
-  text-transform: uppercase;
-  margin-left: 10px;
-} 
+    height: 120px;
+    width: auto;
+    float: left;
+    margin-top: 35px;
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 30px;
+    padding:10px;
+    text-transform: uppercase;
+}
 .logo span
 {
   color: green;
@@ -42,224 +52,254 @@ body
 {
   color: yellowgreen;
 }
-.menu
+.main-nav
 {
-  flex: 1;
+    float: right;
+    margin-top: 60px;
 }
-.menu ul{
-  display: flex;
-  list-style: none;
-  margin-top: 15px;
-  margin-left: 90px;
-  padding-right: 150px;
+.main-nav li {
+    display: inline-block;
+    list-style: none;
+    margin-left: 40px;
 }
-.menu ul li{
-  flex: 1;
-  text-align: left;
+.main-nav li a {
+    padding: 5px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    font-weight: 100;  
 }
-.menu ul li a{
-  margin-left: 10px;
-  color: #fff;
-  font-size: 22px;
-  text-decoration: none;
-  border-radius: 10px;
-  cursor: pointer;
-}
-.menu ul li a:hover{
-background-color:  green;
-padding: 5px;
-}
-.banner-text {
-  display: flex;
-  padding: 15% 0;
-}
-.banner-text-items{
-  color: #fff;
-  margin: auto;
-  text-align: center;
-  width: 50%;
-  height: auto;
-}
-.banner-text-items h2 {
-  font-size: 2em;
-  margin-top: 60px;
-  text-transform: uppercase;
-  color: #ffffff;
-  opacity: .8;
-  letter-spacing: 4px;
-}
-.banner-text-items p{
- color:  #ffffff;
- font-size: 20px;
- opacity: .8;
- text-align: inherit;
-} 
-.main-content
+.main-nav li a:hover
 {
-  display: flex;
-  flex-flow: row wrap;
-   padding: 0.1% 0;
-   background: rgba(44,62,80,0.7);
+ border-bottom: 2px solid #bf55ec;   
 }
-.main-content img
+.main-content-header
 {
-  padding-left: 1%;
-  height: auto;
-  width: 100%;
-}
-.main-content1
-{
-  display: flex;
-  flex-flow: row wrap;
-   padding: 0.1% 0;
-   background: rgba(44,62,80,0.7);
-}
-.main-content1 img
-{
-  padding-left: 1%;
-  height: auto;
-  width: 100%;
+    width: 1180px;
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 h1
 {
-  text-align: center;
-  margin-top: 20px;
-  color:black;
+color: #fff;
+font-size: 240%;
+word-spacing: 5px;
+letter-spacing: 3px;
+margin-bottom: 20px;
+text-transform: uppercase;
+font-weight: lighter;
 }
-#head
+.btn
 {
-  color:black;
-  /* margin-top: 6px; */
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: lighter;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.2, color 0.2;
 }
-.main1
+.btn-full
 {
-  flex: 1;
-  padding: 3%;
-  text-align: center;
+    background-color: transparent;
+    color: #bf55ec;
+    margin-right: 15px;
+    border: 1px solid #bf55ec;
 }
-footer{
-  background-color:#222222 ;
-  overflow: hidden;
+.btn-full:hover
+{
+background-color: white;
 }
-.container-social-media{ 
-display: flex;
-grid-template-columns: 1fr 1fr ;
-height: 60px;
-margin-left: 20%;
+.btn-nav
+{
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid white ;
 }
-.container-social-media p{
-  font-weight: bold;
-  color: white;
-  padding-top: 15px;
-  font-size: 20px;
-  text-align: left;
+.btn-nav:hover
+{
+    background-color: #bf55ec;
 }
-.footer-social-meadia{
-display: grid;
-flex: 3;
-grid-template-columns: 1fr 1fr 1fr ;
-padding: 20px 15px;
-margin-right: 20%;
+.colorchange
+{
+    animation: colorchangeBROADCASTER 1s infinite;
 }
-.footer-social-meadia img{
-  max-width: 60px;
-  max-height: 100%;
-  margin-left: 180px;
+@keyframes colorchangeBROADCASTER{
+    0%{color: red;}
+    25%{color: #bf55ec;}
+    50%{ color: white;}
+    100%{color: #bf55ec;}
 }
-.footer-copyright{
-  color: #ffffff;
-  text-align: center;
-  background-color: #000000;
-  border: 1px solid #000000;
-}
-.footer-copyright p{
-  font-weight: bold;
-  margin-bottom: 3px;
-  font-size: 1em;
+.mobile-icon
+{
+    display:none ;
 }
 
-@media all and (max-width:500px){
-  .top-bar{
-    flex-direction: column;
-    text-align: center;
-  }
-  .logo{
-    padding: 18px 0 0;
-  }
-  .menu ul{
-    flex-direction: column;
-    margin-top: 0;
-  }
-  .menu ul li{
-    padding: 1px;
-    
-  }
-  .banner-text-items{
-    width: 100%;
-  }
-  .banner-text-items h2{
-    font-size: 12px;
-  }
-  .banner-text-items p {
-    font-size: 10px;
-  }
-  .main-content{
-    flex-direction: column;
-  }
-  .footer-copyright
-  {
-    font-size: 2em;
-  }
- .footer-social-meadia img
-  {
-  width: 100%;
-  }
-  .container-social-media p
-  {
-    font-size: 1em;
-    flex: 1;
-    padding: 20px;
-  }
+@media only screen and (max-width: 1180px)
+{
+    .main-content-header{
+        width: 100%;
+        padding: 0 2%;
+
+    }
+} 
+@media only screen and (max-width: 998px)
+{
+    h1{
+       font-size: 200%; 
+    }    
 }
-@media all and (max-width:800px){
-  .top-bar{
-    flex-direction: column;
-    text-align: center;
-  }
-  .logo{
-    padding: 18px 0;
-  }
-  .menu ul{
-    flex-direction: column;
-    margin-top: 0;
-  }
-  .menu ul li{
-    padding: 1px 10px;
-  }
-  .banner-text-items{
-    width: 100%;
-  }
-  .banner-text-items h2{
-    font-size: 12px;
-  }
-  .main-content{
-    flex-direction: column;
-  }
-  .footer-copyright
-  {
-    font-size: 1em;
-  }
-  .footer-social-media img 
-  {
-  width: 100%;
-  }
-  .container-social-media p
-  {
-    font-size: 1em;
-  }
-  h1
-  {
-    flex-direction: column;
-    font-size: 1em;
-  }
+@media only screen and (max-width: 768px)
+{
+    h1{
+       font-size: 180%; 
+    }  
+    .main-nav
+    {
+        display: none;
+    }  
+    .mobile-icon
+    {
+        display: inline-block;
+        color: white;
+        float: right;
+        margin-top: 30px;
+        margin-right: 20px;
+    }
+    .main-nav
+    {
+        float: left;
+    }
+    .main-nav li
+    {
+        display: block;
+        margin-top: 10px;
+    }
+    .footer-menu-one ul li a
+    {
+        display: inline;
+    }
 }
+@media only screen and (max-width: 480px)
+{
+      .btn-full
+      {
+          margin-bottom:20px;
+      }
+      h1{
+        font-size: 160%; 
+     }    
+
+}
+a
+{
+    text-decoration: none;
+    outline: none;
+}
+.footer-main-div
+{
+    width: 100%;
+    height: auto;
+    margin: auto;
+    background: #272727;
+    padding: 20px 0px;
+}
+.footer-social-icons
+{
+    width: 50%;
+    height: auto;
+    margin: auto;
+}
+.footer-social-icons ul
+{
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+.footer-social-icons ul li 
+{
+   display: inline-block; 
+   width: 50px;
+   height: 50px;
+   margin: 0px 8px;
+   border-radius: 50%;
+   background: #32cd32;
+}
+.footer-social-icons ul li a
+{
+  color:#272727;
+  font-size: 25px;
+  display: block;
+}
+.footer-social-icons ul li a:hover
+{
+  color: #fff;
+}
+.footer-social-icons ul li a i{
+    line-height: 50px;
+}
+.footer-menu-one
+{
+   width: 100%;
+   height: auto;
+   margin: auto; 
+   margin-top: 25px;
+}
+.footer-menu-one ul 
+{
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+.footer-menu-one ul li
+{
+    display: inline-block;
+    margin: 0px 15px;
+}
+.footer-menu-one ul li a
+{
+   font-family: arial;
+   font-size: 15px;
+   font-weight: 600;
+   color: #fff;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+}
+.footer-menu-one ul li a:hover
+{
+    color: #32cd32;
+}
+
+
+.footer-botton
+{
+    width: 100%;
+    height: auto;
+    margin: auto;
+    background:#01474a ;
+    padding: 5px;
+}
+.footer-botton p
+{
+    font-family: arial;
+    font-size: 14px;
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.footer-botton p a
+{
+    color: #fff;
+}
+.footer-botton p a:hover
+{
+    color: #272727;
+}
+
+
+
+
