--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -396,7 +396,60 @@ a:hover
       width: 100%;
     }
   }
+  .signup
+{
+    background: rgba(44,62,80,0.7);
+    padding: 25px;
+    width: 800px;
+    height: auto;
+    margin-left: 180px;
+    margin: 0 auto;
+    margin-top: 20px;
+} 
+form
+{
+    width: 800px;
+    text-align: center;
+    height: 430px;
+}
+input
+{
+    width:  300px;
+    text-align: center;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #fff;
+    font-family: 'play' sans-serif;
+    font-size: 16px;
+    padding: 10px 0;
+    transition: border 0.5s;
+    outline: none;
+    color: #fff;
+}
+input[type=button]
+{
+    border:none;
+    width: 190px;
+    background: white;
+    color: #000;
+    font-size: 16px;
+    line-height: 25px;
+    padding: 10px 0;
+    border-radius: 15px;
+    cursor: pointer;
+}
 
+input[type=button]:hover
+{
+    color: #fff;
+    background-color: black;
+}
+
+::placeholder
+{
+    color: aliceblue;
+    opacity: 0.8;
+}
 
 
 
