--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -210,7 +210,7 @@ a
 .footer-social-icons
 {
     width: 50%;
-    height: auto;
+    height: 20px;
     margin: auto;
 }
 .footer-social-icons ul
@@ -238,8 +238,9 @@ a
 {
   color: #fff;
 }
-.footer-social-icons ul li a i{
-    line-height: 50px;
+.footer-social-icons img{
+    line-height: 10px;
+    width: 50px;
 }
 .footer-menu-one
 {
@@ -299,157 +300,162 @@ a
 {
     color: #272727;
 }
-.signin
-{
-    background: rgba(44,62,80,0.7);
-    padding: 40px;
-    width: 60%;
-    margin: auto;
-    margin-top: 20px;
-    height: auto;
-}
-form{
-    width: 100%;
-    text-align: center;
-}
-#for
-{
-    margin-left: 100px;
-}
-input[type=text]
-{
-    width:  240px;
-    text-align: center;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #fff;
-    font-family: 'play' sans-serif;
-    font-size: 16px;
-    font-weight: 200px;
-    padding: 10px 0;
-    transition: border 0.5s;
-    outline: none;
-    color: #fff;
-}
-input[type=password]
-{
-    width:  240px;
-    text-align: center;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #fff;
-    font-family: 'play' sans-serif;
-    font-size: 16px;
-    font-weight: 200px;
-    padding: 10px 0;
-    transition: border 0.5s;
-    outline: none;
-    color: #fff;
-}
 
-input[type=button]
+.login-box
 {
-    border:none;
-    width: 190px;
-    background: white;
-    color: #000;
-    font-size: 16px;
-    line-height: 25px;
-    padding: 10px 0;
-    border-radius: 15px;
-    cursor: pointer;
+    width: 280px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
-input[type=button]:hover
-{
-    color: #fff;
-    background-color: black;
+.login-box h1{
+     float: left;
+     font-size: 40px;
+     border-bottom: 6px solid #4caf50;
+     margin-bottom: 50px;
+     padding: 13px 0;
 }
-h2
+.textbox
 {
-    color:white;
-}
-a
-{
-     color: yellow;
-     text-decoration: blink;
-}
-a:hover
-{
-  color: skyblue;  
-}
-.container
-{
-    display: flex;
-    flex-direction: row;
     width: 100%;
+    overflow: hidden;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 8px 0;
+    border-bottom: 1px solid #4caf50;
+}
+.textbox img
+{
+    width:26px;
+    float: left;
+    text-align: center;
+}
+.textbox input
+{
+  border: none;
+  outline: none;
+  background: none;  
+  color: white;
+  float: left;
+  font-size: 18px;
+  width: 80%;
+  margin: 0 10px;
+}
+.bt
+{
+width: 100%;
+background: none;
+border: 2px solid #4caf50;
+color: white;
+padding: 5px;
+font-size: 18px;
+cursor: pointer;
+margin: 12px 0;
+}
+.bt:hover
+{
+    background: black;
+}
+.register-left
+{
+    float: left;
+  text-align: center;
+  color: #fff;
+  padding: 30px;  
+}
+.register-left img
+{
+  margin-top: 60px;
+  margin-bottom: 18px;
+  width: 80px;
+  animation: mover 1s infinite alternate;
+}
+.register-left p
+{
+   padding: 20px 20px 0; 
+}
+.register-left .primary
+{
+    border-radius: 1.5rem;
+    border: none;
+    width: 120px;
+    background: #f8f8f8;
+    font-weight: 600;
+    color: #555;
+    margin-top: 20px;
+    padding: 10px;
+}
+.register-left .primary:hover
+{
+    background: black;
+}
+.register-right
+{
+    float:right;
+    border: none;
+    background: #f8f8f8;
+    margin-right: 100px;
+    border-top-left-radius: 40% 50%;
+    border-bottom-left-radius: 40% 50%;
+    padding: 50px;
+}
+.register-right h2
+{
+    text-align: center;
+    margin-bottom: 10px;
+    color: #555;
+}
+.register-form 
+{
+    padding: 50px;
+}
+.register-form .form-group input
+{
+    width: 240px;
+    text-align: center;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #fff;
+    font-family: 'play' sans-serif;
+    font-size: 16px;
+    font-weight: 100px;
+    padding: 1px 0;
+    transition: border 0.5s;
+    outline: none;
+    color: black;
 }
 ::placeholder
 {
-    color: aliceblue;
-    opacity: 0.8;
-}
-
-  @media all and (max-width:800px){
-    .signin
-    {
-      flex-direction: column;
-      width: 100%;
-    }
-  }
-  .signup
-{
-    background: rgba(44,62,80,0.7);
-    padding: 25px;
-    width: 800px;
-    height: auto;
-    margin-left: 180px;
-    margin: 0 auto;
-    margin-top: 20px;
-} 
-form
-{
-    width: 800px;
-    text-align: center;
-    height: 430px;
-}
-input
-{
-    width:  300px;
-    text-align: center;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #fff;
-    font-family: 'play' sans-serif;
-    font-size: 16px;
-    padding: 10px 0;
-    transition: border 0.5s;
-    outline: none;
-    color: #fff;
-}
-input[type=button]
-{
-    border:none;
-    width: 190px;
-    background: white;
     color: #000;
-    font-size: 16px;
-    line-height: 25px;
-    padding: 10px 0;
-    border-radius: 15px;
-    cursor: pointer;
-}
-
-input[type=button]:hover
-{
-    color: #fff;
-    background-color: black;
-}
-
-::placeholder
-{
-    color: aliceblue;
     opacity: 0.8;
+    text-align: left;
 }
+
+.register-right .primary
+{
+     float:right;
+    border-radius: 1.5rem;
+    border: none;
+    width: 120px;
+    background: #ff9800;
+    font-weight: 600;
+    color: #fff;
+    margin-top: 20px;
+    padding: 10px;
+}
+.register-right .primary:hover
+{
+    background: #ff5722;
+}
+@keyframes mover
+{
+ 0%{transform: translateY(0);}
+ 100%{transform: translateY(-20px);}
+}
+
+
 .contact-items
 {
 display: flex;
