--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,5 +1,68 @@
 *
 {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.footer
+{
+    width: 100%;
+    background:#00121b;
+    display: block;
+}
+.inner-footer
+{
+    width: 95%;
+    margin: auto;
+    padding: 30px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    justify-content: center;
+}
+.footer-items
+{
+    width: 25%;
+    padding: 10px 20px;
+    box-sizing: border-box;
+}
+h1
+{
+padding: 10px 0;
+font-size: 25px;
+color: #fff;
+text-transform: uppercase;
+}
+.footer-items p
+{
+    color: grey;
+    font-size: 16px;
+    text-align: justify;
+    line-height: 25px;
+}
+h2
+{
+    margin: 10px 0;
+    color: grey;
+    font-size: 16px;
+    font-weight: lighter;
+    text-transform: uppercase;
+}
+.border
+{
+    height: 2px;
+    width: 40px;
+    background: #ff9800;
+}
+ul
+{
+    list-style: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+}
+*
+{
     margin: 0px;
     padding: 0px;
     box-sizing:border-box ;
@@ -13,7 +76,7 @@ body
 }
 header
 {
-background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/pexels.jpeg");
+background-image:url("../images/pexels.jpeg");
 height: 105vh;
 background-size: cover;
 background-repeat: no-repeat;
@@ -199,108 +262,78 @@ a
     text-decoration: none;
     outline: none;
 }
-.footer-main-div
+
+
+
+
+ul a
+{
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    transition: 0.3s;
+}
+ul a:hover
+{
+    color: #ff9800;
+}
+ul li
+{
+    margin: 10px 0;
+    height: 25px;
+}
+li img 
+{
+    margin-right: 20px;
+}
+.social-media
 {
     width: 100%;
-    height: auto;
-    margin: auto;
-    background: #272727;
-    padding: 20px 0px;
-}
-.footer-social-icons
-{
-    width: 50%;
-    height: 20px;
-    margin: auto;
-}
-.footer-social-icons ul
-{
-    margin: 0px;
-    padding: 0px;
+    color: #fff;
     text-align: center;
 }
-.footer-social-icons ul li 
+.social-media a
 {
-   display: inline-block; 
-   width: 50px;
-   height: 50px;
-   margin: 0px 8px;
-   border-radius: 50%;
-   background: #32cd32;
+   text-decoration: none; 
 }
-.footer-social-icons ul li a
+.social-media img
 {
-  color:#272727;
-  font-size: 25px;
-  display: block;
+    height: 30px;
+    width: 30px;
+    margin: 20px 5px;
+    padding: 5px;
+    color: #fff;
+    border-radius: 50%;
+    border: 1px solid grey;
+    transition: 0.3s;
 }
-.footer-social-icons ul li a:hover
+.social-media img:hover
 {
-  color: #fff;
+    background: grey;
 }
-.footer-social-icons img{
-    line-height: 10px;
-    width: 50px;
-}
-.footer-menu-one
-{
-   width: 100%;
-   height: auto;
-   margin: auto; 
-   margin-top: 25px;
-}
-.footer-menu-one ul 
-{
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-}
-.footer-menu-one ul li
-{
-    display: inline-block;
-    margin: 0px 15px;
-}
-.footer-menu-one ul li a
-{
-   font-family: arial;
-   font-size: 15px;
-   font-weight: 600;
-   color: #fff;
-   letter-spacing: 1px;
-   text-transform: uppercase;
-}
-.footer-menu-one ul li a:hover
-{
-    color: #32cd32;
-}
-
-
 .footer-botton
 {
-    width: 100%;
-    height: auto;
-    margin: auto;
-    background:#01474a ;
-    padding: 5px;
-}
-.footer-botton p
-{
-    font-family: arial;
-    font-size: 14px;
+    padding: 10px;
+    background: #3d545f;
+    color: #fff;
+    font-size: 12px;
     text-align: center;
-    color: #fff;
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-.footer-botton p a
-{
-    color: #fff;
-}
-.footer-botton p a:hover
-{
-    color: #272727;
 }
 
+@media screen and (max-width: 1085px)
+{
+    .footer-items
+    {
+        width: 50%;
+    }
+}
+@media screen and (max-width: 600px)
+{
+    .footer-items
+    {
+        width: 100%;
+    }
+}
 .login-box
 {
     width: 280px;
@@ -466,6 +499,28 @@ margin: 12px 0;
  0%{transform: translateY(0);}
  100%{transform: translateY(-20px);}
 }
+
+@media screen and (max-width: 600px)
+{
+    .register-right
+    {
+        width: 100%;
+        /* top: 50%; */
+        margin: 0;
+        padding: 0;
+        margin-bottom: 80px;
+    }
+    .register-left
+    {
+        flex-direction: column;
+        width: 100%;
+        /* top: 50%; */
+        margin: 0;
+        padding: 0;
+        margin-bottom: 5px;
+    }
+}
+
 
 .contact-items h2 {
   color: #fff;
