--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -184,7 +184,7 @@ background-color: white;
 }
 .btn-nav:hover
 {
-    background-color: #bf55ec;
+    background-color: rgba(44,62,80,0.7);
 }
 .colorchange
 {
@@ -563,6 +563,9 @@ margin: 12px 0;
 {
     background: #0B4844;
 }
+#reco{
+    background-color: rgba(0,0,0,.5);
+}
 @keyframes mover
 {
  0%{transform: translateY(0);}
@@ -638,7 +641,7 @@ margin: 12px 0;
 {
  flex: 2;
  height: 900px;
- background: #234a57;
+ background: #00121b;
 }
 .admin-wrapper .left-sidebar ul a
 {
@@ -702,17 +705,17 @@ color: black;
 }
 .edit 
 {
-    color: green;
+    color:rgba(44,62,80,0.7);
     text-decoration: none;
 }
 .delete
 {
-    color: red;
+    color: rgba(0,0,0,.5);
     text-decoration: none;
 }
 .publish
 {
-    color: blue;
+    color: rgba(0,0,0,.5);
     text-decoration: none;
 }
 .edit:hover,
@@ -731,10 +734,6 @@ form input
     margin-left: 80px;
 
 }
-
-
-/* start status */
-
 
 .container-1
 {
@@ -761,15 +760,15 @@ form input
 }
 .row-1:nth-child(1) .column-1:nth-child(1)
 {
-    background: #596270;
+    background: rgba(44,62,80,0.7);
 }
 .row-1:nth-child(1) .column-1:nth-child(2)
 {
-    background: #cf6768;
+    background: rgba(44,62,80,0.7);
 }
 .row-1:nth-child(1) .column-1:nth-child(3)
 {
-    background: #8accc3;
+    background: rgba(44,62,80,0.7);
 }
 .column-1 input
 {
